# mneedham.github.io

./: CNAME  index.html  index.xml  sitemap.xml
2006/: index.html  index.xml
2008/: index.html  index.xml
2009/: index.html  index.xml
2010/: index.html  index.xml
2011/: index.html  index.xml
2012/: index.html  index.xml
2013/: index.html  index.xml
2014/: index.html  index.xml
2015/: index.html  index.xml
2016/: index.html  index.xml
2017/: index.html  index.xml
2018/: index.html  index.xml
blog/: index.html  index.xml  sitemap.xml
blog/2006/: index.html  index.xml
blog/2008/: index.html  index.xml
blog/2009/: index.html  index.xml
blog/2010/: index.html  index.xml
blog/2011/: index.html  index.xml
blog/2012/: index.html  index.xml
blog/2013/: index.html  index.xml
blog/2014/: index.html  index.xml
blog/2015/: index.html  index.xml
blog/2016/: index.html  index.xml
blog/2017/: index.html  index.xml
blog/2018/: index.html  index.xml
blog/2019/: index.html  index.xml
blog/2020/: index.html  index.xml
blog/2021/: index.html  index.xml
blog/2022/: index.html  index.xml
blog/2023/: index.html  index.xml
blog/2023/07/11/: datagen.py  docker-compose.yml  filter_events.py  pyproject.toml
blog/2023/07/11/quix-streams-consume-produce-json-messages/: index.html  index.xml
blog/2023/07/25/: new.py  old.py  pyproject.toml  telemetry.avsc
blog/2023/07/25/confluent-kafka-avroproducer-deprecated-use-avroserializer/: index.html  index.xml
blog/2023/08/21/: pyproject.toml
blog/2023/08/21/python-typeerrr-instance-class-check-runtime-checkable/: index.html  index.xml
blog/2023/08/23/: pyproject.toml
blog/2023/08/23/pyarrow-filter-argument-boolean-type/: index.html  index.xml
blog/2023/09/05/: docker-compose.yml  massage.py  massage_all.py  pyproject.toml
blog/2023/09/05/quix-streams-process-n-kafka-messages/: index.html  index.xml
blog/2023/10/04/: pyproject.toml
blog/2023/10/04/poetry-package-update/: index.html  index.xml
blog/2024/: index.html  index.xml
blog/2025/: index.html  index.xml
blog/category/: index.html  index.xml
blog/css/: crisp.css
blog/js/: image-zoom.js  neo4j-cm.js  neo_codemirror.js
blog/tag/: index.html  index.xml
category/: index.xml
category/.net/: index.html  index.xml
category/agile/: index.html  index.xml
category/algorithms/: index.html  index.xml
category/android/: index.html  (+1 more)
tag/: index.xml
(+12752 files in other folders)
