[tool.poetry]
name = "quix-blog"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"
packages = [{include = "quix_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
quixstreams = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
