[tool.poetry]
name = "deprecated-producer"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"
packages = [{include = "deprecated_producer"}]

[tool.poetry.dependencies]
python = "^3.11"
confluent-kafka = "^2.2.0"
avro = "^1.11.2"
urllib3 = "^2.0.4"
requests = "^2.31.0"
fastavro = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
