[tool.poetry]
name = "chroma-example"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"
packages = [{include = "chroma_example"}]

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.4.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
