[tool.poetry]
name = "pyarrow-example"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"
packages = [{include = "pyarrow_example"}]

[tool.poetry.dependencies]
python = "^3.11"
pyarrow = "^13.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
