[tool.poetry]
name = "quix-example"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"
packages = [{include = "quix_example"}]

[tool.poetry.dependencies]
python = "^3.11"
quixstreams = "^0.5.5"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
