[tool.poetry]
name = "update-blog"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"
packages = [{include = "update_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
